src/test/ui/issues/issue-24352.stderr
error[E0277]: cannot subtract `{integer}` from `f64`
  --> $DIR/issue-24352.rs:3:12
   |
LL |     1.0f64 - 1
   |            ^ no implementation for `f64 - {integer}`
   |
   = help: the trait `Sub<{integer}>` is not implemented for `f64`
   = help: the following implementations were found:
             <&'a f64 as Sub<f64>>
             <&f64 as Sub<&f64>>
             <f64 as Sub<&f64>>
             <f64 as Sub>
             <&'a f32 as Sub<f32>>
             <&'a i128 as Sub<i128>>
             <&'a i16 as Sub<i16>>
             <&'a i32 as Sub<i32>>
           and 48 others
help: consider using a floating-point literal by writing it with `.0`
   |
LL |     1.0f64 - 1.0
   |               ++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
